--- a/book_cover.html
+++ b/book_cover.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
 
     <!-- CSS Files -->
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/book_cover.css" />
+    <link rel="stylesheet" href="CSS/reset.css" />
+    <link rel="stylesheet" href="CSS/book_cover.css" />
 
     <!-- Title of your web page -->	
     <title>Book Cover</title>
